# kinetic_psim

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/core/: Field.h  Output.hpp  Solver.h  Sources.h  Utils.hpp  World.h  constants.hpp
lib/src/core/: Output.cpp  Solver.cpp  Sources.cpp  World.cpp
lib/src/em_pic/: main.cpp
lib/src/es_pic/: main.cpp
test/: CMakeLists.txt
test/core/: UtilityTests.cpp  Utils.hpp
